# opengltemplate

./: .gitignore  CMakeLists.txt  README.md  glad.c  glad.h  main.c
